--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-  <section class="bg-blueLight h-[100vh] text-center py-8 md:p-20 text-white bg-slate-900 uppercase">
+  <section class="bg-blueLight md:h-[100vh] text-center py-8 md:p-20 text-white bg-slate-900 uppercase">
     <h1 class="md:text-4xl mb-6  text-xl font-bold"> <span class="gradient-text bg-gradient-to-r from-purple-500 to-pink-500">&#9836;&#119070;</span> The Drum kit <span class="gradient-text bg-gradient-to-r from-violet-500 to-fuchsia-500">&#9834;&#9835;</span></h1>
     <!-- <img src="images/music.png" width="400"/> -->
     <h5 class="md:text-2xl mb-6 text-lg">Press Below Keys To Enjoy The Music <span class="gradient-text bg-gradient-to-r from-purple-500 to-pink-500">&#119136;&#9835;&#119136;&#119139;&#9834;....</span></h5>
@@ -59,38 +59,36 @@
         <span class="text-lg">Disc Drum </span>
       </div>
       <!-- Audios -->
-      <audio hidden="hidden" class="audio audio-1">
-        <source src="audio/flute.mp3" type="audio/wav">
+      <audio hidden="hidden" class="audio">
+        <source src="audio/flute.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
       </audio>
-      <audio hidden="hidden" class="audio audio-2">
+      <audio hidden="hidden" class="audio">
         <source src="audio/guiter-mini.wav" type="audio/wav">
         Your browser does not support the audio element.
       </audio>
-      <audio hidden="hidden" class="audio audio-3">
+      <audio hidden="hidden" class="audio">
         <source src="audio/guiter.wav" type="audio/wav">
         Your browser does not support the audio element.
       </audio>
-      <audio hidden="hidden" class="audio audio-4">
-        <source src="audio/pino-mini.mp3" type="audio/wav">
+      <audio hidden="hidden" class="audio">
+        <source src="audio/pino-mini.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
       </audio>
-      <audio hidden="hidden" class="audio audio-5">
-        <source src="audio/pino-large.mp3" type="audio/wav">
+      <audio hidden="hidden" class="audio">
+        <source src="audio/pino-large.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
       </audio>
-      <audio hidden="hidden" class="audio audio-6">
-        <source src="audio/drum.mp3" type="audio/wav">
+      <audio hidden="hidden" class="audio">
+        <source src="audio/drum.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
       </audio>
-      <audio hidden="hidden" class="audio audio-7">
-        <source src="audio/disc-drum.mp3" type="audio/wav">
+      <audio hidden="hidden" class="audio">
+        <source src="audio/disc-drum.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
       </audio>
     </div>
   </section>
   <script src="script.js"></script>
-
 </body>
-
 </html>
